--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<img src="Images/jquery.png" class="img-responsive skill wow fadeIn" data-wow-delay="0.2s">
 			</div>
 			<div class="col-md-2 col-sm-6 col-xs-6">
-				<img src="Images/html.png" class="img-responsive skill wow fadeIn" data-wow-delay="0.2s">
+				<img src="Images/HTML.png" class="img-responsive skill wow fadeIn" data-wow-delay="0.2s">
 			</div>
 			<div class="col-md-2 col-sm-6 col-xs-6">
 				<img src="Images/css.png" class="img-responsive skill wow fadeIn" data-wow-delay="0.2s">
