sample work added

--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-4">
-				<span class="work">Sample work</span>
+			<div class="col-sm-6">
+				<div class="portfolio-wrapper">
+				<img src="Images/elayani.png" class="img-responsive" >
+				<p class="title">Fully responsive website for family get together</p>
+				<a target="_blank" href="https://github.com/febinsebastian/Elayanithottathil" class="btn btn-default github-btn">GITHUB</a>			
 			</div>
-			<div class="col-sm-4">
-				<span class="work">Sample work</span>
-			</div>
+		</div>
 			<div class="col-sm-4">
 				<span class="work">Sample work</span>
 			</div>
